--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 Django = "==2.0.3"
+gunicorn = "*"
+"psycopg2.binary" = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
