--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ Django = "==2.0.3"
 gunicorn = "*"
 "psycopg2.binary" = "*"
 psycopg2-binary = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
